--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -411,7 +411,7 @@ orders.volume=Volume
 chart.candle=Candles
 chart.area=Line
 chart.wait=Wait ...
-orderinfo.title=Removal of the order
+orderinfo.title=Order information
 orderinfo.id=ID
 orderinfo.status=Status
 orderinfo.createdate=Created
