--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -477,7 +477,7 @@ orders.volume=Объем
 chart.candle=Свечи
 chart.area=Линия
 chart.wait=Загрузка ...
-orderinfo.title=Удаление ордера
+orderinfo.title=Информация об ордере
 orderinfo.id=ID
 orderinfo.status=Статус
 orderinfo.createdate=Создан
