--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -662,3 +662,6 @@ admin.sessionControl.submit=Expire
 wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
 wallets.downloadInputOutput=Download input-output
+admin.user.transactions.extendedFilter=Extended filter
+admin.user.transactions.applyFilter=Apply filter
+admin.user.transactions.resetFilter=Reset filter
