--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -672,3 +672,7 @@ admin.sessionControl.action=Действие
 admin.sessionControl.modalTitle=Прервать сессию
 admin.sessionControl.prompt=Вы уверены, что хотите прервать выбранную сессию?
 admin.sessionControl.submit=Прервать
+
+admin.user.transactions.extendedFilter=Расширенный фильтр
+admin.user.transactions.applyFilter=Применить фильтр
+admin.user.transactions.resetFilter=Сброс фильтра
