--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -870,3 +870,7 @@ admin.sessionControl.modalTitle=Expire session
 admin.sessionControl.prompt=Are you sure you want to expire this session?
 admin.sessionControl.submit=Expire
 wallets.downloadInputOutput=Download input-output
+
+admin.user.transactions.extendedFilter=Extended filter
+admin.user.transactions.applyFilter=Apply filter
+admin.user.transactions.resetFilter=Reset filter
