--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -600,3 +600,7 @@ admin.sessionControl.action=Action
 admin.sessionControl.modalTitle=Expire session
 admin.sessionControl.prompt=Are you sure you want to expire this session?
 admin.sessionControl.submit=Expire
+
+admin.user.transactions.extendedFilter=Extended filter
+admin.user.transactions.applyFilter=Apply filter
+admin.user.transactions.resetFilter=Reset filter
