--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -662,3 +662,4 @@ admin.sessionControl.submit=Expire
 wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
 wallets.downloadInputOutput=Download input-output
+mercnahts.output.minSum=Minimal sum for withdraw:
