--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -600,3 +600,5 @@ admin.sessionControl.action=Action
 admin.sessionControl.modalTitle=Expire session
 admin.sessionControl.prompt=Are you sure you want to expire this session?
 admin.sessionControl.submit=Expire
+
+mercnahts.output.minSum=Minimal sum for withdraw:
