--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -672,3 +672,4 @@ admin.sessionControl.action=Действие
 admin.sessionControl.modalTitle=Прервать сессию
 admin.sessionControl.prompt=Вы уверены, что хотите прервать выбранную сессию?
 admin.sessionControl.submit=Прервать
+mercnahts.output.minSum=Минимальная сумма для вывода:
