--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -688,3 +688,4 @@ admin.sessionControl.modalTitle=Expire session
 admin.sessionControl.prompt=Are you sure you want to expire this session?
 admin.sessionControl.submit=Expire
 wallets.downloadInputOutput=Download input-output
+mercnahts.output.minSum=Minimal sum for withdraw:
