add min withdraw amount edit page for admin

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -606,3 +606,8 @@ admin.user.transactions.applyFilter=Apply filter
 admin.user.transactions.resetFilter=Reset filter
 
 mercnahts.output.minSum=Minimal sum for withdraw:
+
+admin.currencyLimits.title=Currency limits
+admin.currencyLimits.table=Currencies
+admin.currencyLimits.modalTitle=Edit limits
+admin.currencyLimits.minLimit=Minimum for withdraw
