--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -666,3 +666,7 @@ admin.user.transactions.extendedFilter=Extended filter
 admin.user.transactions.applyFilter=Apply filter
 admin.user.transactions.resetFilter=Reset filter
 mercnahts.output.minSum=Minimal sum for withdraw:
+admin.currencyLimits.title=Currency limits
+admin.currencyLimits.table=Currencies
+admin.currencyLimits.modalTitle=Edit limits
+admin.currencyLimits.minLimit=Minimum for withdraw
