--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -677,3 +677,7 @@ admin.user.transactions.extendedFilter=Расширенный фильтр
 admin.user.transactions.applyFilter=Применить фильтр
 admin.user.transactions.resetFilter=Сброс фильтра
 mercnahts.output.minSum=Минимальная сумма для вывода:
+admin.currencyLimits.title=Ограничения по валютам
+admin.currencyLimits.table=Валюты
+admin.currencyLimits.modalTitle=Изменить ограничения
+admin.currencyLimits.minLimit=Минимум для вывода
