add locale codes

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -453,7 +453,7 @@ wallets.balance=Balance
 news.title=NEWS
 news.more=More...
 news.absent=News in English is missing
-news.locale=Language news
+news.locale=Language
 news.date=Date news
 news.datetimeplaceholder=yyyy-mm-dd
 news.errordatetime=Format: yyyy-mm-dd
@@ -611,3 +611,13 @@ admin.currencyLimits.title=Currency limits
 admin.currencyLimits.table=Currencies
 admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimum for withdraw
+admin.currencyLimits.name=Name
+admin.currencyLimits.description=Description
+news.createInEditor=Create news in editor
+news.uploadArchive=Upload ZIP archive
+news.newsTitle=Title
+news.brief=Brief
+news.variants=Variants
+news.status=Status
+news.status.active=Active
+news.status.disabled=Disabled
