--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -681,3 +681,13 @@ admin.currencyLimits.title=Ограничения по валютам
 admin.currencyLimits.table=Валюты
 admin.currencyLimits.modalTitle=Изменить ограничения
 admin.currencyLimits.minLimit=Минимум для вывода
+admin.currencyLimits.name=Имя
+admin.currencyLimits.description=Описание
+news.createInEditor=Создать новость в редакторе
+news.uploadArchive=Загрузить ZIP архив
+news.newsTitle=Заголовок
+news.brief=Описание
+news.variants=Варианты
+news.status=Статус
+news.status.active=Активна
+news.status.disabled=Отключена
