--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -670,3 +670,13 @@ admin.currencyLimits.title=Currency limits
 admin.currencyLimits.table=Currencies
 admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimum for withdraw
+admin.currencyLimits.name=Name
+admin.currencyLimits.description=Description
+news.createInEditor=Create news in editor
+news.uploadArchive=Upload ZIP archive
+news.newsTitle=Title
+news.brief=Brief
+news.variants=Variants
+news.status=Status
+news.status.active=Active
+news.status.disabled=Disabled
