add locale codes

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -682,3 +682,4 @@ admin.currencyLimits.table=Валюты
 admin.currencyLimits.modalTitle=Изменить ограничения
 admin.currencyLimits.minLimit=Минимум для вывода
 dashboard.qrLogin.successful=Вы успешно вошли на сайт с помощью QR
+dashboard.qrLogin.login=Войти с помощью QR-кода
