--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -613,3 +613,4 @@ admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimum for withdraw
 
 dashboard.qrLogin.successful=You have successfully logged in via QR
+dashboard.qrLogin.login=Enter via QR code
