--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -698,3 +698,4 @@ admin.currencyLimits.table=Currencies
 admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimum for withdraw
 dashboard.qrLogin.successful=You have successfully logged in via QR
+dashboard.qrLogin.login=Enter via QR code
