--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -891,3 +891,4 @@ news.status.active=Active
 news.status.disabled=Disabled
 dashboard.qrLogin.successful=You have successfully logged in via QR
 dashboard.qrLogin.login=Enter via QR code
+orders.partialAccept.success=One order was accepted partially - {0} of {1} {2}
