--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -693,3 +693,4 @@ news.status.active=Активна
 news.status.disabled=Отключена
 dashboard.qrLogin.successful=Вы успешно вошли на сайт с помощью QR
 dashboard.qrLogin.login=Войти с помощью QR-кода
+orders.partialAccept.success=Один ордер был принят частично - {0} из {1} {2}
