--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -624,3 +624,4 @@ news.status.disabled=Disabled
 
 dashboard.qrLogin.successful=You have successfully logged in via QR
 dashboard.qrLogin.login=Enter via QR code
+rightsider.currentTime=Current time:
