--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -624,3 +624,5 @@ news.status.disabled=Disabled
 
 dashboard.qrLogin.successful=You have successfully logged in via QR
 dashboard.qrLogin.login=Enter via QR code
+
+myorders.accepted=Accepted
