--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -709,3 +709,4 @@ news.status.active=Active
 news.status.disabled=Disabled
 dashboard.qrLogin.successful=You have successfully logged in via QR
 dashboard.qrLogin.login=Enter via QR code
+myorders.accepted=Accepted
