--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -503,7 +503,7 @@ myorders.rate=Price
 myorders.total=Total
 myorders.cancelled=Cancelled
 myorders.open=Open
-myorders.deal=Deals
+myorders.deal=All deals
 myorders.dealdate=Date the deal
 myorders.canceldate=Date the cancel
 orders.sellorders=Orders for sell:
