--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -569,7 +569,7 @@ myorders.rate=Цена
 myorders.total=Итого
 myorders.cancelled=Отмененные
 myorders.open=Открытые
-myorders.deal=Сделки
+myorders.deal=Все сделки
 myorders.dealdate=Дата сделки
 myorders.canceldate=Дата отмены
 orders.sellorders=Ордера на продажу:
