add users comments

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -50,6 +50,15 @@ admin.successfulDeleteUserFiles = File removed successful
 admin.uploadFiles = Upload files (Only images *.png, *.jpeg, not bigger than 5 MB)
 admin.yourFiles= Uploaded files
 admin.internalError = An error has occurred. Please try again later.
+admin.comments=Comments
+admin.creator=Creator
+admin.dateTime=Date:time
+admin.comment=Comment
+admin.createComment=Create comment
+admin.subjectCommentMessage=You have new comment from Exrates admin
+admin.sendMessage= Send email to user
+admin.messageSent= Message sent
+admin.promptSendMessageRequestAccept = Are you sure that you want to send this message to email
 withdrawal.requestDatetime=Date of creation
 withdrawal.user=User
 withdrawal.amount=Amount
