--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -440,6 +440,15 @@ admin.uploadFiles = Загрузите файлы (Только картинки
 #not translated
 admin.yourFiles= Загруженные файлы
 admin.ref=Ссылка
+admin.comments=Комментарии
+admin.dateTime=Дата:время
+admin.creator=Создатель
+admin.comment=Комментарий
+admin.createComment=Создать комментарий
+admin.subjectCommentMessage=Вы получили новое сообщение от администратора Exrates
+admin.sendMessage= Отправить сообщение пользователю
+admin.messageSent= Сообщение отправлено
+admin.promptSendMessageRequestAccept = Вы уверены что хотите отправить это сообщение на email
 orders.currencybuy=Покупка
 orders.currencysale=Продажа
 orders.for=за
