--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -592,3 +592,13 @@ session.expire=The session has expired. You need to log in again.
 wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
 wallets.downloadInputOutput=Download input-output
+
+admin.comments=Comments
+admin.creator=Creator
+admin.dateTime=Date:time
+admin.comment=Comment
+admin.createComment=Create comment
+admin.subjectCommentMessage=You have new comment from Exrates admin
+admin.sendMessage= Send email to user
+admin.messageSent= Message sent
+admin.promptSendMessageRequestAccept = Are you sure that you want to send this message to email
