--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -891,3 +891,13 @@ news.status.active=Active
 news.status.disabled=Disabled
 dashboard.qrLogin.successful=You have successfully logged in via QR
 dashboard.qrLogin.login=Enter via QR code
+
+admin.comments=Comments
+admin.creator=Creator
+admin.dateTime=Date:time
+admin.comment=Comment
+admin.createComment=Create comment
+admin.subjectCommentMessage=You have new comment from Exrates admin
+admin.sendMessage= Send email to user
+admin.messageSent= Message sent
+admin.promptSendMessageRequestAccept = Are you sure that you want to send this message to email
