add notifications for order and withdraw

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -719,3 +719,13 @@ admin.subjectCommentMessage=You have new comment from Exrates admin
 admin.sendMessage= Send email to user
 admin.messageSent= Message sent
 admin.promptSendMessageRequestAccept = Are you sure that you want to send this message to email
+
+acceptorder.message=Your order #{0} has been accepted!
+
+notifications.absent=No notifications for you at the moment
+notifications.remove=Remove
+notifications.markReadAll=Mark all as read
+notifications.removeAll=Remove all
+
+deleteOrder.notificationTitle=Order deleted
+deleteOrder.notificationMessage=Order #{0} has been deleted by administrator.
