--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -702,3 +702,13 @@ news.status.active=Активна
 news.status.disabled=Отключена
 dashboard.qrLogin.successful=Вы успешно вошли на сайт с помощью QR
 dashboard.qrLogin.login=Войти с помощью QR-кода
+
+acceptorder.message=Ваш ордер #{0} принят!
+
+notifications.absent=Сейчас для Вас нет уведомлений
+notifications.remove=Удалить
+notifications.markReadAll=Пометить все как прочитанные
+notifications.removeAll=Удалить все
+
+deleteOrder.notificationTitle=Ордер удалён
+deleteOrder.notificationMessage=Ваш ордер #{0} удалён администратором.
