--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -633,3 +633,13 @@ news.status.disabled=Disabled
 
 dashboard.qrLogin.successful=You have successfully logged in via QR
 dashboard.qrLogin.login=Enter via QR code
+
+acceptorder.message=Your order #{0} has been accepted!
+
+notifications.absent=No notifications for you at the moment
+notifications.remove=Remove
+notifications.markReadAll=Mark all as read
+notifications.removeAll=Remove all
+
+deleteOrder.notificationTitle=Order deleted
+deleteOrder.notificationMessage=Order #{0} has been deleted by administrator.
