fix users comments

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -448,7 +448,10 @@ admin.createComment=Создать комментарий
 admin.subjectCommentMessage=Вы получили новое сообщение от администратора Exrates
 admin.sendMessage= Отправить сообщение пользователю
 admin.messageSent= Сообщение отправлено
-admin.promptSendMessageRequestAccept = Вы уверены что хотите отправить это сообщение на email
+admin.promptSendMessageRequestAccept = Вы уверены, что хотите отправить это сообщение на email
+admin.checkLanguage= Проверьте язык по умолчанию для пользователя
+admin.successCommentDelete = Комментарий успешно удален
+admin.promptDeleteUserComment = Вы уверены, что хотите что хотите удалить этот комментарий?
 orders.currencybuy=Покупка
 orders.currencysale=Продажа
 orders.for=за
