add notification options

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -645,6 +645,14 @@ notifications.absent=No notifications for you at the moment
 notifications.remove=Remove
 notifications.markReadAll=Mark all as read
 notifications.removeAll=Remove all
+notifications.settings=Notification settings
+notificationEvent.CUSTOM=Other messages
+notificationEvent.ADMIN=Notifications from administrators
+notificationEvent.ACCOUNT=Account changes
+notificationEvent.ORDER=Orders
+notificationEvent.IN_OUT=Input/output
+notification.options.sendNotification=Send notification
+notification.options.sendEmail=Send email
 
 deleteOrder.notificationTitle=Order deleted
 deleteOrder.notificationMessage=Order #{0} has been deleted by administrator.
