--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -712,6 +712,14 @@ notifications.absent=Сейчас для Вас нет уведомлений
 notifications.remove=Удалить
 notifications.markReadAll=Пометить все как прочитанные
 notifications.removeAll=Удалить все
+notifications.settings=Настройки сообщений
+notificationEvent.CUSTOM=Прочие уведомления
+notificationEvent.ADMIN=Уведомления от администраторов
+notificationEvent.ACCOUNT=Изменения в учетной записи
+notificationEvent.ORDER=Ордера
+notificationEvent.IN_OUT=Ввод/вывод
+notification.options.sendNotification=Присылать оповещения
+notification.options.sendEmail=Присылать email
 
 deleteOrder.notificationTitle=Ордер удалён
 deleteOrder.notificationMessage=Ваш ордер #{0} удалён администратором.
