--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -916,6 +916,7 @@ notificationEvent.ORDER=Orders
 notificationEvent.IN_OUT=Input/output
 notification.options.sendNotification=Send notification
 notification.options.sendEmail=Send email
+notifications.settings=Notification settings
 
 deleteOrder.notificationTitle=Order deleted
 deleteOrder.notificationMessage=Order #{0} has been deleted by administrator.
