--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -712,7 +712,7 @@ notifications.absent=Сейчас для Вас нет уведомлений
 notifications.remove=Удалить
 notifications.markReadAll=Пометить все как прочитанные
 notifications.removeAll=Удалить все
-notifications.settings=Настройки сообщений
+notifications.settings=Настройки уведомлений
 notificationEvent.CUSTOM=Прочие уведомления
 notificationEvent.ADMIN=Уведомления от администраторов
 notificationEvent.ACCOUNT=Изменения в учетной записи
