--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -716,7 +716,8 @@ admin.creator=Creator
 admin.dateTime=Date:time
 admin.comment=Comment
 admin.createComment=Create comment
-admin.subjectCommentMessage=You have new comment from Exrates admin
+admin.subjectCommentMessage=You have new comment from Exrates admin{0}
+admin.subjectCommentTitle=New comment from Exrates admin
 admin.sendMessage= Send email to user
 admin.messageSent= Message sent
 admin.promptSendMessageRequestAccept = Are you sure that you want to send this message to email
@@ -735,6 +736,14 @@ notificationEvent.IN_OUT=Input/output
 notification.options.sendNotification=Send notification
 notification.options.sendEmail=Send email
 notifications.settings=Notification settings
+account.blocked.title=Account blocked!
+account.blocked.message=Your account is blocked by administrator
+account.bannedInChat.title=You are banned in chat
+paymentRequest.accepted.title=Request accepted
+paymentRequest.accepted.message=Your payment request has been accepted!
+
+referral.title=Referral payment
+referral.message=Referral payment {0} {1} received
 
 deleteOrder.notificationTitle=Order deleted
 deleteOrder.notificationMessage=Order #{0} has been deleted by administrator.
