--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -445,7 +445,8 @@ admin.dateTime=Дата:время
 admin.creator=Создатель
 admin.comment=Комментарий
 admin.createComment=Создать комментарий
-admin.subjectCommentMessage=Вы получили новое сообщение от администратора Exrates
+admin.subjectCommentMessage=Вы получили новое сообщение от администратора Exrates{0}
+admin.subjectCommentTitle=Cообщение от администратора Exrates
 admin.sendMessage= Отправить сообщение пользователю
 admin.messageSent= Сообщение отправлено
 admin.promptSendMessageRequestAccept = Вы уверены, что хотите отправить это сообщение на email
@@ -720,6 +721,14 @@ notificationEvent.ORDER=Ордера
 notificationEvent.IN_OUT=Ввод/вывод
 notification.options.sendNotification=Присылать оповещения
 notification.options.sendEmail=Присылать email
+account.blocked.title=Учетная запись заблокированв!
+account.blocked.message=Ваша учетная запись заблокированв администратором
+account.bannedInChat.title=Вас заблокировали в чате
+paymentRequest.accepted.title=Заявка принята
+paymentRequest.accepted.message=Ваша заявка на совершение платежа была принята!
+
+referral.title=Реферальное начислание
+referral.message=Получено реферальное начислание {0} {1}
 
 deleteOrder.notificationTitle=Ордер удалён
 deleteOrder.notificationMessage=Ваш ордер #{0} удалён администратором.
