--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -905,3 +905,4 @@ admin.promptSendMessageRequestAccept = Are you sure that you want to send this m
 admin.checkLanguage= Please, check users language settings
 admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
+wallets.downloadOrders=Download orders
