--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -245,6 +245,7 @@ mywallets.rbalance=Reserved
 wallets.totalInputAmount=Total input amount
 wallets.totalOutputAmount=Total output amount
 wallets.downloadInputOutput=Download input-output
+wallets.downloadOrders=Download orders
 orders=buy orders
 orders.accept=Accept
 orders.amountbuy=sum
