--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -485,6 +485,7 @@ wallets.download=Выгрузить данные
 wallets.totalInputAmount=Итого ввели
 wallets.totalOutputAmount=Итого вывели
 wallets.downloadInputOutput=Выгрузить ввод-вывод
+wallets.downloadOrders=Выгрузить ордера
 orders.volume=Объем
 chart.candle=Свечи
 chart.area=Линия
