add security restrictions and options page

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -640,3 +640,18 @@ dashboard.qrLogin.login=Enter via QR code
 
 myorders.accepted=Accepted
 rightsider.currentTime=Current time:
+admin.accessRights=Access authorities
+adminAuthority.PROCESS_WITHDRAW=Accept or decline withdraw requests
+adminAuthority.PROCESS_INVOICE=Accept refill requests
+adminAuthority.DELETE_ORDER=Delete orders
+adminAuthority.COMMENT_USER=Comment users
+adminAuthority.MANAGE_SESSIONS=Manage users sessions
+adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
+adminAuthority.MANAGE_ACCESS=Manage access authorities
+
+
+
+
+
+
+
