--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -906,3 +906,12 @@ admin.checkLanguage= Please, check users language settings
 admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
+admin.accessRights=Access rights
+
+adminAuthority.PROCESS_WITHDRAW=Accept or decline withdraw requests
+adminAuthority.PROCESS_INVOICE=Accept refill requests
+adminAuthority.DELETE_ORDER=Delete orders
+adminAuthority.COMMENT_USER=Comment users
+adminAuthority.MANAGE_SESSIONS=Manage users sessions
+adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
+adminAuthority.MANAGE_ACCESS=Manage access authorities
