add manual balance change

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -733,3 +733,5 @@ adminAuthority.COMMENT_USER=Comment users
 adminAuthority.MANAGE_SESSIONS=Manage users sessions
 adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
 adminAuthority.MANAGE_ACCESS=Manage access authorities
+adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
+operationtype.MANUAL=Manual input
