--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -708,3 +708,4 @@ adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
 adminAuthority.MANAGE_ACCESS=Manage access authorities
 adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
 operationtype.MANUAL=Manual input
+transactionsourcetype.MANUAL=MANUAL
