--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -652,7 +652,7 @@ adminAuthority.MANAGE_ACCESS=Manage access authorities
 adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
 
 operationtype.MANUAL=Manual input
-
+transactionsourcetype.MANUAL=MANUAL
 
 
 
