--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -669,3 +669,5 @@ referral.message=Referral payment {0} {1} received
 deleteOrder.notificationTitle=Order deleted
 deleteOrder.notificationMessage=Order #{0} has been deleted by administrator.
 rightsider.currentTime=Current time:
+orders.partialAccept.yourOrder=Your order #{0} was accepted partially - {1} of {2} {3}
+orders.partialAccept.title=Order accepted partially
