--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -736,3 +736,5 @@ deleteOrder.notificationMessage=Ваш ордер #{0} удалён админи
 orders.partialAccept.success=Один ордер был принят частично - {0} из {1} {2}
 myorders.accepted=Принятые
 rightsider.currentTime=Текущее время:
+orders.partialAccept.yourOrder=Ваш ордер #{0} был принят частично - {1} из {2} {3}
+orders.partialAccept.title=Ордер принят частично
