--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -725,3 +725,5 @@ admin.checkLanguage= Please, check users language settings
 admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
+orders.partialAccept.yourOrder=Your order #{0} was accepted partially - {1} of {2} {3}
+orders.partialAccept.title=Order accepted partially
