add limit for input requests

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -242,6 +242,7 @@ about_us.contacts = Наши контакты:
 #not translated
 about_us.telephone = Телефон: {0}
 #not translated
+merchants.InputRequestsLimit=Ваш дневной лимит ввода для этой мерчанты превышен. Пожалуйста, попробуйте завтра.
 about_us.email= Email: {0}
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
