--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -606,3 +606,4 @@ admin.checkLanguage= Please, check users language settings
 admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
+merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
