--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -710,3 +710,5 @@ adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
 operationtype.MANUAL=Manual input
 transactionsourcetype.MANUAL=MANUAL
 merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
+admin.manualBalanceChange.title=Change balance manually
+admin.submit=Submit
