--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -721,3 +721,5 @@ adminAuthority.MANAGE_ACCESS=Управлять правами доступа
 adminAuthority.MANUAL_BALANCE_CHANGE=Ручное изменение баланса
 operationtype.MANUAL=Ручной ввод
 transactionsourcetype.MANUAL=ВРУЧНУЮ
+admin.manualBalanceChange.title=Изменить баланс вручную
+admin.submit=Подтвердить
