--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -920,3 +920,5 @@ adminAuthority.MANAGE_ACCESS=Manage access authorities
 adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
 operationtype.MANUAL=Manual input
 transactionsourcetype.MANUAL=MANUAL
+admin.manualBalanceChange.title=Change balance manually
+admin.submit=Submit
