--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -654,6 +654,8 @@ adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
 
 operationtype.MANUAL=Manual input
 transactionsourcetype.MANUAL=MANUAL
+admin.manualBalanceChange.title=Change balance manually
+admin.submit=Submit
 
 
 
