add commission edit

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -642,3 +642,9 @@ orders.partialAccept.success=One order was accepted partially - {0} of {1} {2}
 
 myorders.accepted=Accepted
 rightsider.currentTime=Current time:
+admin.commissions=Commissions
+admin.editCommission=Edit commission
+admin.commissions.operationType=Operation type
+admin.commissions.value=Value, %
+admin.stockExchangeCommissions=Stock exchange commissions
+admin.merchantsCommissions=Merchant commissions
