--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -710,3 +710,9 @@ dashboard.qrLogin.login=Войти с помощью QR-кода
 orders.partialAccept.success=Один ордер был принят частично - {0} из {1} {2}
 myorders.accepted=Принятые
 rightsider.currentTime=Текущее время:
+admin.commissions=Комиссии
+admin.editCommission=Редактирование комиссии
+admin.commissions.operationType=Тип операции
+admin.commissions.value=Значение, %
+admin.stockExchangeCommissions=Комиссии биржи
+admin.merchantsCommissions=Комиссии платежной системы
