--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -699,3 +699,9 @@ admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
 merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
+admin.commissions=Commissions
+admin.editCommission=Edit commission
+admin.commissions.operationType=Operation type
+admin.commissions.value=Value, %
+admin.stockExchangeCommissions=Stock exchange commissions
+admin.merchantsCommissions=Merchant commissions
