--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -642,3 +642,6 @@ orders.partialAccept.success=One order was accepted partially - {0} of {1} {2}
 
 myorders.accepted=Accepted
 rightsider.currentTime=Current time:
+accessDenied.title=Access denied
+accessDenied.message=You do not have permission to access this page!
+accessDenied.signInDifferentUser=Sign in as different user
