--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -710,3 +710,6 @@ dashboard.qrLogin.login=Войти с помощью QR-кода
 orders.partialAccept.success=Один ордер был принят частично - {0} из {1} {2}
 myorders.accepted=Принятые
 rightsider.currentTime=Текущее время:
+accessDenied.title=Доступ закрыт
+accessDenied.message=Вам не разрешён доступ к данной странице!
+accessDenied.signInDifferentUser=Войти под другой учетной записью
