--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -726,3 +726,6 @@ admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
 merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
+accessDenied.title=Access denied
+accessDenied.message=You do not have permission to access this page!
+accessDenied.signInDifferentUser=Sign in as different user
