add change access to merchants

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -961,3 +961,5 @@ admin.commissions.operationType=Operation type
 admin.commissions.value=Value, %
 admin.stockExchangeCommissions=Stock exchange commissions
 admin.merchantsCommissions=Merchant commissions
+admin.merchantAccess=Access to merchants
+admin.toggleBlockPrompt=Are you sure you want to change access to this merchant?
