--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -760,4 +760,6 @@ admin.editCommission=Редактирование комиссии
 admin.commissions.operationType=Тип операции
 admin.commissions.value=Значение, %
 admin.stockExchangeCommissions=Комиссии биржи
-admin.merchantsCommissions=Комиссии платежной системы
+admin.merchantsCommissions=Комиссии платёжной системы
+admin.merchantAccess=Доступ к платёжным системам
+admin.toggleBlockPrompt=Вы уверены, что хотите изменить доступ для данной платежной системы?
