--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -763,3 +763,4 @@ admin.stockExchangeCommissions=Комиссии биржи
 admin.merchantsCommissions=Комиссии платёжной системы
 admin.merchantAccess=Доступ к платёжным системам
 admin.toggleBlockPrompt=Вы уверены, что хотите изменить доступ для данной платежной системы?
+merchant.operationNotAvailable=К сожалению, в данный момент операция недоступна
