--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -698,3 +698,4 @@ admin.stockExchangeCommissions=Stock exchange commissions
 admin.merchantsCommissions=Merchant commissions
 admin.merchantAccess=Access to merchants
 admin.toggleBlockPrompt=Are you sure you want to change access to this merchant?
+merchant.operationNotAvailable=Unfortunately, the operation is not available at the moment
