add NGN currency

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -683,7 +683,7 @@ merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet
     Kasikorn bank <br> \
     015-1-65751-6
 
-
+merchants.withoutInvoiceWallet = The wallet in opening process, it will be opened in the near future.
 contacts.address=<p>Address:</p>\
 <p>99 Foch ave</p>\
 <p>Staten Island, NY 10305</p>\
