--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -204,6 +204,7 @@ merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke aku
 merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
+merchants.withoutInvoiceWallet = The wallet in opening process, it will be opened in the near future.
 #not translated
 merchants.depositNotificationWithFee =Silahkan membayar %1s di dompet %1s (ditambah Komisi Koin EDR )
 #not translated
