fix disabled input; add block all buttons

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -765,3 +765,8 @@ admin.merchantsCommissions=Комиссии платёжной системы
 admin.merchantAccess=Доступ к платёжным системам
 admin.toggleBlockPrompt=Вы уверены, что хотите изменить доступ для данной платежной системы?
 merchant.operationNotAvailable=К сожалению, в данный момент операция недоступна
+admin.blockAllPrompt=Вы уверены, что хотите изменить доступ для всех платежных систем?
+admin.blockAllInput=Заблокировать весь ввод
+admin.blockAllOutput=Заблокировать весь вывод
+admin.unblockAllInput=Разблокировать весь ввод
+admin.unblockAllOutput=Разблокировать весь вывод
