--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -700,3 +700,8 @@ admin.merchantsCommissions=Merchant commissions
 admin.merchantAccess=Access to merchants
 admin.toggleBlockPrompt=Are you sure you want to change access to this merchant?
 merchant.operationNotAvailable=Unfortunately, the operation is not available at the moment
+admin.blockAllPrompt=Are you sure you want to change access to all merchants?
+admin.blockAllInput=Block all input
+admin.blockAllOutput=Block all output
+admin.unblockAllInput=Unblock all input
+admin.unblockAllOutput=Unblock all output
