add authority for user editing

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -944,6 +944,7 @@ adminAuthority.COMMENT_USER=Comment users
 adminAuthority.MANAGE_SESSIONS=Manage users sessions
 adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
 adminAuthority.MANAGE_ACCESS=Manage access authorities
+adminAuthority.EDIT_USER=Edit user
 
 orders.partialAccept.yourOrder=Your order #{0} was accepted partially - {1} of {2} {3}
 orders.partialAccept.title=Order accepted partially
