--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -735,6 +735,8 @@ adminAuthority.MANAGE_SESSIONS=Manage users sessions
 adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
 adminAuthority.MANAGE_ACCESS=Manage access authorities
 adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
+adminAuthority.EDIT_USER=Edit user
+
 operationtype.MANUAL=Manual input
 transactionsourcetype.MANUAL=MANUAL
 orders.partialAccept.yourOrder=Your order #{0} was accepted partially - {1} of {2} {3}
