--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -680,7 +680,7 @@ adminAuthority.MANAGE_SESSIONS=Manage users sessions
 adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
 adminAuthority.MANAGE_ACCESS=Manage access authorities
 adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
-
+adminAuthority.EDIT_USER=Edit user
 
 orders.partialAccept.yourOrder=Your order #{0} was accepted partially - {1} of {2} {3}
 orders.partialAccept.title=Order accepted partially
