--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -762,6 +762,8 @@ adminAuthority.MANAGE_SESSIONS=Manage users sessions
 adminAuthority.SET_CURRENCY_LIMIT=Set currency limits for withdraw
 adminAuthority.MANAGE_ACCESS=Manage access authorities
 adminAuthority.MANUAL_BALANCE_CHANGE=Manual balance change
+adminAuthority.EDIT_USER=Edit user
+
 operationtype.MANUAL=Manual input
 transactionsourcetype.MANUAL=MANUAL
 merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
