add user transfer - server side

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -789,3 +789,5 @@ admin.blockAllInput=Block all input
 admin.blockAllOutput=Block all output
 admin.unblockAllInput=Unblock all input
 admin.unblockAllOutput=Unblock all output
+transactionsourcetype.USER=USER
+operationtype.USER_TRANSFER=User-to-user transfer
