--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -772,3 +772,5 @@ admin.blockAllInput=Заблокировать весь ввод
 admin.blockAllOutput=Заблокировать весь вывод
 admin.unblockAllInput=Разблокировать весь ввод
 admin.unblockAllOutput=Разблокировать весь вывод
+transactionsourcetype.USER=ПОЛЬЗОВАТЕЛЬ
+operationtype.USER_TRANSFER=Перевод средств между пользователями
