add client side

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -763,3 +763,4 @@ admin.unblockAllInput=Unblock all input
 admin.unblockAllOutput=Unblock all output
 transactionsourcetype.USER=USER
 operationtype.USER_TRANSFER=User-to-user transfer
+mywallets.transfer=Transfer
