--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -707,3 +707,11 @@ admin.unblockAllInput=Unblock all input
 admin.unblockAllOutput=Unblock all output
 transactionsourcetype.USER=USER
 operationtype.USER_TRANSFER=User-to-user transfer
+mywallets.transfer=Transfer
+wallets.transferTitle=Transfer of costs
+wallets.transferCurrency=Currency for transfer
+wallets.modalTransferCommission=Exchange Fee will be : __amount __currency (__percent)
+wallets.modalTransferFinalSum=Amount to be transferred : __amount __currency
+wallets.modalTransferHeader=You transfer __amount __currency to user __username
+transfer.nickname=Nickname
+transfer.successful={0} {1} successfully transferred to user {2}
