--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -774,3 +774,11 @@ admin.unblockAllInput=Разблокировать весь ввод
 admin.unblockAllOutput=Разблокировать весь вывод
 transactionsourcetype.USER=ПОЛЬЗОВАТЕЛЬ
 operationtype.USER_TRANSFER=Перевод средств между пользователями
+mywallets.transfer=Перевести
+wallets.transferTitle=Перевод средств
+wallets.transferCurrency=Валюта к переводу
+wallets.modalTransferCommission=Комиссия биржи составит : __amount __currency (__percent)
+wallets.modalTransferFinalSum=Итого сумма к переводу : __amount __currency
+wallets.modalTransferHeader=Вы переводите __amount __currency пользователю __username
+transfer.nickname=Nickname
+transfer.successful={0} {1} успешно переведены пользователю {2}
