--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -791,3 +791,4 @@ admin.unblockAllInput=Unblock all input
 admin.unblockAllOutput=Unblock all output
 transactionsourcetype.USER=USER
 operationtype.USER_TRANSFER=User-to-user transfer
+mywallets.transfer=Transfer
