add client side

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -705,7 +705,7 @@ admin.blockAllInput=Block all input
 admin.blockAllOutput=Block all output
 admin.unblockAllInput=Unblock all input
 admin.unblockAllOutput=Unblock all output
-transactionsourcetype.USER=USER
+transactionsourcetype.USER_TRANSFER=USER
 operationtype.USER_TRANSFER=User-to-user transfer
 mywallets.transfer=Transfer
 wallets.transferTitle=Transfer of costs
@@ -713,5 +713,10 @@ wallets.transferCurrency=Currency for transfer
 wallets.modalTransferCommission=Exchange Fee will be : __amount __currency (__percent)
 wallets.modalTransferFinalSum=Amount to be transferred : __amount __currency
 wallets.modalTransferHeader=You transfer __amount __currency to user __username
-transfer.nickname=Nickname
+transfer.nickname=Enter nickname of user to transfer costs: 
 transfer.successful={0} {1} successfully transferred to user {2}
+transfer.negativeAmount=Negative or zero amount not acceptable
+transfer.invalidAmount=Amount exceeds wallet active balance
+transfer.userNotFound=User with nickname {0} not found
+transfer.walletNotFound=No wallet found for this currency and user
+transfer.received=You received a transfer of {0} {1}
