--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -772,7 +772,7 @@ admin.blockAllInput=Заблокировать весь ввод
 admin.blockAllOutput=Заблокировать весь вывод
 admin.unblockAllInput=Разблокировать весь ввод
 admin.unblockAllOutput=Разблокировать весь вывод
-transactionsourcetype.USER=ПОЛЬЗОВАТЕЛЬ
+transactionsourcetype.USER_TRANSFER=ПОЛЬЗОВАТЕЛЬ
 operationtype.USER_TRANSFER=Перевод средств между пользователями
 mywallets.transfer=Перевести
 wallets.transferTitle=Перевод средств
@@ -780,5 +780,10 @@ wallets.transferCurrency=Валюта к переводу
 wallets.modalTransferCommission=Комиссия биржи составит : __amount __currency (__percent)
 wallets.modalTransferFinalSum=Итого сумма к переводу : __amount __currency
 wallets.modalTransferHeader=Вы переводите __amount __currency пользователю __username
-transfer.nickname=Nickname
+transfer.nickname=Введите nickname пользователя, которому Вы хотите перевести средства: 
 transfer.successful={0} {1} успешно переведены пользователю {2}
+transfer.negativeAmount=Количество не может быть отрицательным или равным нулю
+transfer.invalidAmount=Количество превышает активный баланс кошелька
+transfer.userNotFound=Пользователь с nickname {0} не найден
+transfer.walletNotFound=Не найден кошелёк для данных пользователя и валюты
+transfer.received=Вы получили перевод {0} {1}
