--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -720,3 +720,4 @@ transfer.invalidAmount=Amount exceeds wallet active balance
 transfer.userNotFound=User with nickname {0} not found
 transfer.walletNotFound=No wallet found for this currency and user
 transfer.received=You received a transfer of {0} {1}
+transfer.invalidNickname=Invalid nickname
