--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -787,3 +787,4 @@ transfer.invalidAmount=Количество превышает активный 
 transfer.userNotFound=Пользователь с nickname {0} не найден
 transfer.walletNotFound=Не найден кошелёк для данных пользователя и валюты
 transfer.received=Вы получили перевод {0} {1}
+transfer.invalidNickname=Некорректный nickname
