--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -805,3 +805,4 @@ transfer.userNotFound=User with nickname {0} not found
 transfer.walletNotFound=No wallet found for this currency and user
 transfer.received=You received a transfer of {0} {1}
 transfer.invalidNickname=Invalid nickname
+notifications.invalid=At least one option must be selected in each category
