--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -788,3 +788,4 @@ transfer.userNotFound=Пользователь с nickname {0} не найден
 transfer.walletNotFound=Не найден кошелёк для данных пользователя и валюты
 transfer.received=Вы получили перевод {0} {1}
 transfer.invalidNickname=Некорректный nickname
+notifications.invalid=В каждой категории нужно выбрать хотя бы один вариант
