--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -198,9 +198,21 @@ merchants.depositNotificationWithCurrencyCNY.body = Silahkan membayar {0} ke aku
     帐号：110923954410401, <br> \
     开户行：招商银行北京东直门支行
 merchants.depositNotificationWithCurrencyIDR.body = Silahkan membayar {0} ke akun {1} <br> \
-    1. Bank danamon <br> \
-    2. name  i nyoman mardana<br>\
-    3. Schet 3600851194
+    1. Bank: BCA <br> \
+    Account number: 3150963141<br>\
+    Recipient: Nanda Rizal Pahlewi<br>\
+    <br>\
+    2. Bank: MANDIRI<br>\
+    Account number: 1440099965557<br>\
+    Recipient: Nanda Rizal Pahlewi<br>\
+    <br>\
+    3. Bank: BNI<br>\
+    Account number: 0483087786<br>\
+    Recipient: Nanda Rizal Pahlewi<br>\
+    <br>\
+    4. Bank: BRI<br>\
+    Account number: 057901000435567<br>\
+    Recipient: Nanda Rizal Pahlewi
 merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet {1} <br> \
     Kasikorn bank <br> \
     015-1-65751-6
