add operation type names localization

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -774,7 +774,7 @@ admin.blockAllOutput=Block all output
 admin.unblockAllInput=Unblock all input
 admin.unblockAllOutput=Unblock all output
 transactionsourcetype.USER=USER
-operationtype.USER_TRANSFER=User-to-user transfer
+operationtype.USER_TRANSFER=USER TRANSFER
 mywallets.transfer=Transfer
 wallets.transferTitle=Transfer of costs
 wallets.transferCurrency=Currency for transfer
