--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -766,7 +766,7 @@ accessDenied.title=Доступ закрыт
 accessDenied.message=Вам не разрешён доступ к данной странице!
 accessDenied.signInDifferentUser=Войти под другой учетной записью
 adminAuthority.MANUAL_BALANCE_CHANGE=Ручное изменение баланса
-operationtype.MANUAL=Ручной ввод
+operationtype.MANUAL=РУЧНОЙ ВВОД
 transactionsourcetype.MANUAL=ВРУЧНУЮ
 admin.manualBalanceChange.title=Изменить баланс вручную
 admin.submit=Подтвердить
@@ -785,7 +785,7 @@ admin.blockAllOutput=Заблокировать весь вывод
 admin.unblockAllInput=Разблокировать весь ввод
 admin.unblockAllOutput=Разблокировать весь вывод
 transactionsourcetype.USER_TRANSFER=ПОЛЬЗОВАТЕЛЬ
-operationtype.USER_TRANSFER=Перевод средств между пользователями
+operationtype.USER_TRANSFER=ПЕРЕВОД
 mywallets.transfer=Перевести
 wallets.transferTitle=Перевод средств
 wallets.transferCurrency=Валюта к переводу
