--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -790,3 +790,5 @@ transfer.walletNotFound=No wallet found for this currency and user
 transfer.received=You received a transfer of {0} {1}
 transfer.invalidNickname=Invalid nickname
 notifications.invalid=At least one option must be selected in each category
+transfer.selfNickname=You cannot transfer costs to yourself
+merchants.transfer.minSum=Minimal sum for transfer:
