add input limits

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1001,3 +1001,5 @@ transfer.invalidNickname=Invalid nickname
 notifications.invalid=At least one option must be selected in each category
 transfer.selfNickname=You cannot transfer costs to yourself
 merchants.transfer.minSum=Minimal sum for transfer:
+merchants.input.minSum=Minimal sum for refill:
+
