--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -736,3 +736,4 @@ transfer.invalidNickname=Invalid nickname
 notifications.invalid=At least one option must be selected in each category
 transfer.selfNickname=You cannot transfer costs to yourself
 merchants.transfer.minSum=Minimal sum for transfer:
+merchants.input.minSum=Minimal sum for refill:
