--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -803,3 +803,4 @@ transfer.invalidNickname=Некорректный nickname
 notifications.invalid=В каждой категории нужно выбрать хотя бы один вариант
 transfer.selfNickname=Вы не можете перевести средства самому себе
 merchants.transfer.minSum=Минимальная сумма для перевода:
+merchants.input.minSum=Минимальная сумма для пополнения:
