add new info email

--- a/Controller/src/main/resources/about_us.properties
+++ b/Controller/src/main/resources/about_us.properties
@@ -1,3 +1,4 @@
 contacts.telephone= +38 099 618 84 51
 contacts.email=support@exrates.me
+contacts.infoEmail=no-replay@exrates.tech
 contacts.feedbackEmail=exrates@exrates.me
