--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -682,8 +682,8 @@ mercnahts.output.minSum=Minimal sum for withdraw:
 admin.currencyLimits.title=Currency limits
 admin.currencyLimits.table=Currencies
 admin.currencyLimits.modalTitle=Edit limits
-admin.currencyLimits.minLimit=Minimum for withdraw
-admin.currencyLimits.name=Name
+admin.currencyLimits.minLimit=Minimal sum
+admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
