--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -708,8 +708,8 @@ mercnahts.output.minSum=Минимальная сумма для вывода:
 admin.currencyLimits.title=Ограничения по валютам
 admin.currencyLimits.table=Валюты
 admin.currencyLimits.modalTitle=Изменить ограничения
-admin.currencyLimits.minLimit=Минимум для вывода
-admin.currencyLimits.name=Имя
+admin.currencyLimits.minLimit=Минимальная сумма
+admin.currencyLimits.name=Валюта
 admin.currencyLimits.description=Описание
 news.createInEditor=Создать новость в редакторе
 news.uploadArchive=Загрузить ZIP архив
