--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1002,4 +1002,6 @@ notifications.invalid=At least one option must be selected in each category
 transfer.selfNickname=You cannot transfer costs to yourself
 merchants.transfer.minSum=Minimal sum for transfer:
 merchants.input.minSum=Minimal sum for refill:
+admin.merchantsCommissions.input=Refill commission
+admin.merchantsCommissions.output=Withdraw commission
 
