--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -804,3 +804,5 @@ notifications.invalid=В каждой категории нужно выбрат
 transfer.selfNickname=Вы не можете перевести средства самому себе
 merchants.transfer.minSum=Минимальная сумма для перевода:
 merchants.input.minSum=Минимальная сумма для пополнения:
+admin.merchantsCommissions.input=Комиссия при пополнении
+admin.merchantsCommissions.output=Комиссия при выводе
